snippets/Nemerle.Statechart/Tests/testsuite/positive/join_transitions_with_guard_and_action2.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  flags testing auto_initial;
  //flags debug;
  
  name "join transition with guards and actions 2";
  
  state A
  {
    a => B;
  }

  region B
  {
    join j1 [a1] / act => A;
    
    state E
    {
      a => F;
    }
    
    state F
    {
      a => j1;
    }
    
  } and
  {
    
    state D
    {
      a => C;
    }
    
    state C
    {
      a => j1;
    }
    
  }
  
  #>)]
  public class example
  {
    public a1 : bool {get;set;}
    
  }

  
  module Test
  {
    Main() : void
    {
      def fsm = example();
      def tester = fsm.GetTester();
      tester.ConsoleTestInit();
      tester.Initiate("A", "EntryA");
      tester.Test("a", "ED", ["A"], ["B", "E", "D"]);
      tester.Test("a", "FC", ["E", "D"], ["F", "C"]);
      tester.Test("a", null);
      fsm.a1 = true;
      tester.Test("a", ["C", "F", "B"], ["act"], ["A"]);
      fsm.Terminate();
    }
  }
 
/*
BEGIN-OUTPUT
EntryA
[A]
Ok
Processing a 'a' 
ExitA
EntryB
EntryE
EntryD
[ED]
Ok
Processing a 'a' 
ExitE
ExitD
EntryF
EntryC
[FC]
Ok
Processing a 'a' 
[FC]
Ok
Processing a 'a' 
ExitC
ExitF
ExitB
act
EntryA
[A]
Ok
END-OUTPUT
*/
