snippets/Nemerle.Statechart/Tests/testsuite/negative/join_transitions_cannot_have_guards_or_actions.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  flags testing auto_initial;
  //flags debug;
  
  name "join transitions cannot have guards or actions";
  
  state A
  {
    a => B;
  }

  join j1 [a1] / act => A;
  
  region B
  {
    
    state E
    {
      a => F;
    }
    
    state F
    {
      a [a2] => j1; // E: Transition targeting join pseudostate "TransitionFToJoinj1Bya" cannot have guards or actions
    }
    
  } and
  {
    
    state D
    {
      a => C;
    }
    
    state C
    {
      a / act2 => j1; // E: Transition targeting join pseudostate "TransitionCToJoinj1Bya" cannot have guards or actions
    }
    
  }
  
  #>)]
  public class example
  {
    public a1 : bool {get;set;}
    public a2 : bool {get;set;}
    
    act2() : void
    {
    }
    
    act() : void
    {
      Console.WriteLine("action")
    }
  }

  
